--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,22 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        <p class="navbar-text float-right">
+          <% if user_signed_in? %>
+          Logged in as <strong><%= current_user.email %></strong>.
+          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+          <%= image_tag current_user.gravatar_url, :class => "gravatar" %>
+          <% else %>
+          <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+          <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+          <% end %>
+        </p>
         <li class="nav-item active">
           <a class="nav-link" href="/ideas">Ideas</a>
+        </li>
+        <li class="nav-item">
+        <%= link_to 'New Idea', new_idea_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
         <a class="nav-link" href="/pages/info">About Dorka</a>
@@ -29,6 +43,12 @@
   </div>
 </nav>
     <div class="container">
+      <% if notice %>
+  <p class="alert alert-success"><%= notice %></p>
+  <% end %>
+  <% if alert %>
+  <p class="alert alert-danger"><%= alert %></p>
+  <% end %>
     <%= yield %>
     </div>
 
